// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compact LocalNavigation renders a stable snapshot 1`] = `
<div>
  <nav
    class="section section-default section-palette-default local-navigation local-navigation-prominence-default"
    data-section-type="default"
    data-testid="section"
  >
    <div
      class="container container-width-default"
      data-testid="grid-container"
    >
      <div
        class="grid grid-direction-row"
        data-testid="grid-grid"
      >
        <div
          class="column grid-column-12"
          data-testid="column"
        >
          <div
            class="local-navigation-variant local-navigation-variant-compact"
          >
            <div
              class="local-navigation-action local-navigation-action-left"
            >
              <a
                class="text-link size-inherit text-and-icon columnGap action-button"
                data-testid="text-link"
                role="link"
              >
                <span
                  aria-hidden="true"
                  class="icon icon-size-default outline icon"
                  data-icon="chevron-left"
                  data-testid="icon"
                >
                  
                </span>
                <span
                  class="base-text base-paragraph text-link-text"
                  lang="nl"
                >
                  Terug
                </span>
              </a>
            </div>
            <div
              class="local-navigation-middle"
            >
              <h1
                class="heading heading-size-md align-center local-navigation-title local-navigation-title-size-lg"
                data-testid="heading"
                lang="nl"
              >
                Title
              </h1>
            </div>
            <div
              class="local-navigation-action local-navigation-action-right"
            >
              <a
                class="text-link size-inherit text-and-icon columnGap action-button"
                data-testid="text-link"
                role="link"
              >
                <span
                  class="base-text base-paragraph text-link-text"
                  lang="nl"
                >
                  Action right
                </span>
                <span
                  aria-hidden="true"
                  class="icon icon-size-default outline icon"
                  data-icon="add"
                  data-testid="icon"
                >
                  
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Default LocalNavigation renders a stable snapshot 1`] = `
<div>
  <nav
    class="section section-default section-palette-default local-navigation local-navigation-prominence-default"
    data-section-type="default"
    data-testid="section"
  >
    <div
      class="container container-width-default"
      data-testid="grid-container"
    >
      <div
        class="grid grid-direction-row"
        data-testid="grid-grid"
      >
        <div
          class="column grid-column-12"
          data-testid="column"
        >
          <div
            class="local-navigation-variant local-navigation-variant-default"
          >
            <div
              class="local-navigation-action local-navigation-action-left"
            >
              <a
                class="text-link size-inherit text-and-icon columnGap"
                data-testid="text-link"
                role="link"
              >
                <span
                  aria-hidden="true"
                  class="icon icon-size-default outline icon"
                  data-icon="chevron-left"
                  data-testid="icon"
                >
                  
                </span>
                <span
                  class="base-text base-paragraph text-link-text"
                  lang="nl"
                >
                  Terug
                </span>
              </a>
            </div>
            <div
              class="local-navigation-middle"
            >
              <p
                class="display display-size-md"
                lang="nl"
              >
                Title
              </p>
            </div>
            <div
              class="local-navigation-action local-navigation-action-right"
            >
              <a
                class="text-link size-inherit text-and-icon columnGap"
                data-testid="text-link"
                role="link"
              >
                <span
                  class="base-text base-paragraph text-link-text"
                  lang="nl"
                >
                  Action right
                </span>
                <span
                  aria-hidden="true"
                  class="icon icon-size-default outline icon"
                  data-icon="add"
                  data-testid="icon"
                >
                  
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Emphasised LocalNavigation renders a stable snapshot 1`] = `
<div>
  <nav
    class="section section-emphasised section-palette-default local-navigation local-navigation-prominence-emphasised"
    data-section-type="default"
    data-testid="section"
  >
    <div>
      <div
        aria-hidden="true"
        class="glow-gradient glow4 section-glow-gradient no-hover"
        data-testid="glow-gradient"
        style="z-index: -1;"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="100%"
          preserveAspectRatio="xMidYMid slice"
          viewBox="0 0 960 1080"
          width="100%"
        >
          <g>
            <g
              clip-path="url(#clip:r0:)"
            >
              <path
                d="M960 0H0v1080h960V0z"
                fill="url(#paint0_linear_1_214-:r0:)"
              />
              <path
                d="M960 0H0v1080h960V0z"
                fill="url(#paint0_radial_1_215-:r0:)"
              />
              <path
                d="M960 0H0v1080h960V0z"
                fill="url(#paint0_radial_1_216-:r0:)"
              />
              <path
                d="M960 0H0v1080h960V0z"
                fill="url(#paint0_radial_1_217-:r0:)"
              />
              <path
                d="M960 0H0v1080h960V0z"
                fill="url(#paint0_radial_1_218-:r0:)"
              />
            </g>
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="paint0_linear_1_214-:r0:"
                x1="960"
                x2="3.57628e-05"
                y1="2.86102e-05"
                y2="1080"
              >
                <stop
                  offset="0.777327"
                  stop-color="var(--linear-stop-1)"
                />
                <stop
                  offset="1"
                  stop-color="var(--linear-stop-2)"
                />
              </lineargradient>
              <radialgradient
                cx="0"
                cy="0"
                gradientTransform="translate(512.887 -51.8359) rotate(81.5402) scale(1259.49 688.866)"
                gradientUnits="userSpaceOnUse"
                id="paint0_radial_1_215-:r0:"
                r="1"
              >
                <stop
                  offset="0.66"
                  stop-color="var(--radial-stop-1)"
                />
                <stop
                  offset="0.84"
                  stop-color="var(--radial-stop-2)"
                />
                <stop
                  offset="1"
                  stop-color="var(--radial-stop-3)"
                  stop-opacity="0"
                />
              </radialgradient>
              <radialgradient
                cx="0"
                cy="0"
                gradientTransform="translate(694.036 444.213) rotate(81.8699) scale(871.282 508.378)"
                gradientUnits="userSpaceOnUse"
                id="paint0_radial_1_216-:r0:"
                r="1"
              >
                <stop
                  stop-color="var(--radial-stop-4)"
                />
                <stop
                  offset="0.33941"
                  stop-color="var(--radial-stop-5)"
                />
                <stop
                  offset="0.739171"
                  stop-color="var(--radial-stop-6)"
                />
                <stop
                  offset="1"
                  stop-color="var(--radial-stop-7)"
                  stop-opacity="0"
                />
              </radialgradient>
              <radialgradient
                cx="0"
                cy="0"
                gradientTransform="translate(639.043 117.686) rotate(77.0217) scale(1035.7 500.267)"
                gradientUnits="userSpaceOnUse"
                id="paint0_radial_1_217-:r0:"
                r="1"
              >
                <stop
                  offset="0.578582"
                  stop-color="var(--radial-stop-8)"
                />
                <stop
                  offset="0.697843"
                  stop-color="var(--radial-stop-9)"
                />
                <stop
                  offset="1"
                  stop-color="var(--radial-stop-10)"
                  stop-opacity="0"
                />
              </radialgradient>
              <radialgradient
                cx="0"
                cy="0"
                gradientTransform="translate(615.816 -56.5526) rotate(90) scale(835.571 555.545)"
                gradientUnits="userSpaceOnUse"
                id="paint0_radial_1_218-:r0:"
                r="1"
              >
                <stop
                  offset="0.00787439"
                  stop-color="var(--radial-stop-11)"
                />
                <stop
                  offset="0.565"
                  stop-color="var(--radial-stop-12)"
                />
                <stop
                  offset="0.708535"
                  stop-color="var(--radial-stop-13)"
                />
                <stop
                  offset="1"
                  stop-color="var(--radial-stop-14)"
                  stop-opacity="0"
                />
              </radialgradient>
              <clippath
                id="clip:r0:"
              >
                <path
                  d="M0 0H960V1080H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </g>
        </svg>
      </div>
      <div
        class="container container-width-default"
        data-testid="grid-container"
      >
        <div
          class="grid grid-direction-row"
          data-testid="grid-grid"
        >
          <div
            class="column grid-column-12"
            data-testid="column"
          >
            <div
              class="local-navigation-variant local-navigation-variant-compact"
            >
              <div
                class="local-navigation-action local-navigation-action-left"
              >
                <button
                  class="button button-size-sm button-prominence-default has-icon-right-and-text is-inverted action-button"
                  data-testid="undefined-button-left"
                >
                  <span
                    aria-hidden="true"
                    class="icon icon-size-default outline button-icon button-icon-size-sm"
                    data-icon="chevron-left"
                    data-testid="button-icon-left"
                  >
                    
                  </span>
                  <span
                    class="button-label"
                  >
                    <span>
                      Terug
                    </span>
                  </span>
                </button>
              </div>
              <div
                class="local-navigation-middle"
              >
                <h1
                  class="heading heading-size-md align-center local-navigation-title local-navigation-title-size-lg"
                  data-testid="heading"
                  lang="nl"
                >
                  Title
                </h1>
              </div>
              <div
                class="local-navigation-action local-navigation-action-right"
              >
                <button
                  class="button button-size-sm button-prominence-default has-icon-left-and-text is-inverted action-button"
                  data-testid="undefined-button-right"
                >
                  <span
                    class="button-label"
                  >
                    <span>
                      Action right
                    </span>
                  </span>
                  <span
                    aria-hidden="true"
                    class="icon icon-size-default outline button-icon button-icon-size-sm"
                    data-icon="add"
                    data-testid="button-icon-right"
                  >
                    
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`WithLeftAction LocalNavigation renders a stable snapshot 1`] = `
<div>
  <nav
    class="section section-default section-palette-default local-navigation local-navigation-prominence-default"
    data-section-type="default"
    data-testid="section"
  >
    <div
      class="container container-width-default"
      data-testid="grid-container"
    >
      <div
        class="grid grid-direction-row"
        data-testid="grid-grid"
      >
        <div
          class="column grid-column-12"
          data-testid="column"
        >
          <div
            class="local-navigation-variant local-navigation-variant-default"
          >
            <div
              class="local-navigation-action local-navigation-action-left"
            >
              <a
                class="text-link size-inherit text-and-icon columnGap"
                data-testid="text-link"
                role="link"
              >
                <span
                  aria-hidden="true"
                  class="icon icon-size-default outline icon"
                  data-icon="chevron-left"
                  data-testid="icon"
                >
                  
                </span>
                <span
                  class="base-text base-paragraph text-link-text"
                  lang="nl"
                >
                  Terug
                </span>
              </a>
            </div>
            <div
              class="local-navigation-middle"
            >
              <p
                class="display display-size-md"
                lang="nl"
              >
                Title
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`WithRightAction LocalNavigation renders a stable snapshot 1`] = `
<div>
  <nav
    class="section section-default section-palette-default local-navigation local-navigation-prominence-default"
    data-section-type="default"
    data-testid="section"
  >
    <div
      class="container container-width-default"
      data-testid="grid-container"
    >
      <div
        class="grid grid-direction-row"
        data-testid="grid-grid"
      >
        <div
          class="column grid-column-12"
          data-testid="column"
        >
          <div
            class="local-navigation-variant local-navigation-variant-default"
          >
            <div
              class="local-navigation-middle"
            >
              <p
                class="display display-size-md"
                lang="nl"
              >
                Title
              </p>
            </div>
            <div
              class="local-navigation-action local-navigation-action-right"
            >
              <a
                class="text-link size-inherit text-and-icon columnGap"
                data-testid="text-link"
                role="link"
              >
                <span
                  class="base-text base-paragraph text-link-text"
                  lang="nl"
                >
                  Action right
                </span>
                <span
                  aria-hidden="true"
                  class="icon icon-size-default outline icon"
                  data-icon="add"
                  data-testid="icon"
                >
                  
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
